--- a/wp-content/themes/safefromharm/styles.css
+++ b/wp-content/themes/safefromharm/styles.css
@@ -1,3 +1,17 @@
+/*!
+        Theme Name: Safe From Harm
+        Theme URI: http://cryolab.dk
+        Author: Tomas Nielsen & Camilla lauridsen
+        Author URI: http://cryolab.dk/
+        Description: This theme is special designed for and Multimedia Design school project
+        Version: 1.0
+        License: none
+        License URI: license.txt
+        Tags: dark, blue
+        This theme, like WordPress, is licensed under the GPL.
+        */
+
+
 html,body{
 	margin: 0;
 }
