--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -46,7 +46,7 @@ nav{
     margin-left: 5%;
     margin-right: 2%;
 /*
-    background-image: url(images/logo_hvid.png);
+    background-image: url(http://savefromharm.cryolab.dk/wp-content/themes/safefromharm/images/logo_hvid.png);
     background-size: 100%;
     background-repeat: no-repeat;
 */
