--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -31,13 +31,24 @@ html,body{
     background-color: #000;
 }
 
-nav{
-	width:100%;
-	height: 4vw;
-	position: fixed;
-    background-color: rgba(34, 34, 34, 0.5);
+.navbar{
+    width:100%;
+    height: 4vw;
+    margin-bottom: 0px;
+    position: fixed;
+    border: 0px;
     transition: all 1s;
     z-index: 1;
+}
+
+.navbar-default{
+    background-color: rgba(34, 34, 34, 0.5);
+}
+
+@media (min-width: 768px){
+.navbar {
+        border-radius: 0px;
+    }
 }
 
 .logo{
@@ -59,7 +70,7 @@ nav{
 
 }
 
-.botton{
+.navbar li{
 	width: 100%;
 	height: auto;
     margin: 0 auto;
@@ -75,12 +86,12 @@ nav{
     cursor: pointer;
 }
 
-.botton:hover{
+.navbar li:hover{
     color: darkorange!important;
     transition: all 0.5s;
 }
 
-.donate{
+.navbar li:last-child{
     font-size: 22px;
     letter-spacing: 1px;
     font-family: Bebas Neue, 'Open Sans', sans-serif;
