--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -31,24 +31,13 @@ html,body{
     background-color: #000;
 }
 
-.navbar{
-    width:100%;
-    height: 4vw;
-    margin-bottom: 0px;
-    position: fixed;
-    border: 0px;
+nav{
+	width:100%;
+	height: 4vw;
+	position: fixed;
+    background-color: rgba(34, 34, 34, 0.5);
     transition: all 1s;
     z-index: 1;
-}
-
-.navbar-default{
-    background-color: rgba(34, 34, 34, 0.5);
-}
-
-@media (min-width: 768px){
-.navbar {
-        border-radius: 0px;
-    }
 }
 
 .logo{
@@ -70,7 +59,8 @@ html,body{
 
 }
 
-/*.navbar li{
+.botton{
+	width: 100%;
 	height: auto;
     margin: 0 auto;
 	display: inline-block;
@@ -85,12 +75,12 @@ html,body{
     cursor: pointer;
 }
 
-.navbar li:hover{
+.botton:hover{
     color: darkorange!important;
     transition: all 0.5s;
 }
 
-.navbar li:last-child{
+.donate{
     font-size: 22px;
     letter-spacing: 1px;
     font-family: Bebas Neue, 'Open Sans', sans-serif;
@@ -103,10 +93,10 @@ html,body{
     cursor: pointer;
 }
 
-.navbar li:last-child:hover{
+.botton#donate:hover{
     color: white !important;
     transition: all 0.5s;
-}*/
+}
 
 h1{
     text-align: center;
