--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -18,13 +18,17 @@ html,body{
 
 .page{
 	width: 100%;
-	height: auto;
+	height: 100vh;
     border: 1px solid;
     font-family: 'Open Sans', sans-serif;
     background-color: #fff;
 }
 
-.page:nth-child(even){
+.smallpage{
+    width: 100%;
+	height: 50vh;
+    border: 1px solid;
+    font-family: Bebas Neue, 'Open Sans', sans-serif;
     background-color: #000;
 }
 
