--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -75,6 +75,10 @@ nav ul li, nav ul li a{
     text-decoration: none;
 }
 
+nav ul li a:hover, nav ul li a:link, nav ul li a:active, nav ul li a:visited{
+    text-decoration: none;
+} 
+
 .botton:hover{
     color: darkorange!important;
     transition: all 0.5s;
