--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -78,6 +78,9 @@ nav ul li, nav ul li a{
 nav ul li{
     margin-right: 2vw;
 }
+nav ul li:first-child{
+    margin-left: 2vw;
+}
 
 nav ul li a:hover, nav ul li a:link, nav ul li a:active, nav ul li a:visited{
     text-decoration: none;
