nyt fron bg billede i css

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -149,6 +149,9 @@ p{
 
 .page#home{
     background-color: #000;
+    background-image: url(http://savefromharm.cryolab.dk/wp-content/themes/safefromharm/images/front3.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 /*---------------OUR MISSION--------------*/
