nyt bg front billede HOPEFULLY

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -149,7 +149,7 @@ p{
 
 .page#home{
     background-color: #000;
-    background-image: url(http://savefromharm.cryolab.dk/wp-content/themes/savefromharm/images/front3.jpg);
+    background-image: url(http://safefromharm.cryolab.dk/wp-content/themes/savefromharm/images/front3.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
 }
@@ -176,7 +176,7 @@ p{
 /*---------------THE TIGER FAMILY--------------*/
 
 
-
+S
 
 /*---------------WHY THEY MATTER--------------*/
 
