--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -34,7 +34,7 @@ html,body{
 
 nav{
 	width:100%;
-	height: 4vw;
+	height: 5vw;
 	position: fixed;
     background-color: rgba(0, 0, 0, 0.5);
     transition: all 1s;
@@ -44,6 +44,7 @@ nav{
 .logo{
     width: 5vw;
     height: 4vw;
+    margin-top: 0.5vw;
     margin-left: 5%;
     margin-right: 2%;
 /*
@@ -63,7 +64,7 @@ nav ul li, nav ul li a{
     font-weight: bold;
     text-align: center;
     color: #fff;
-    line-height: 4vw;
+    line-height: 5vw;
     transition: all 1s;
     cursor: pointer;
     list-style: none;
