--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -330,6 +330,11 @@ footer{
     background-color: #222222;
 }
 
+.modal-content label{
+    display: block;
+    margin-top: 10px;
+}
+
 .modal-footer{
     border-top: 1px solid #111;
 }
