--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -335,6 +335,11 @@ footer{
     margin-top: 10px;
 }
 
+.modal-content input[type="submit"]{
+    display: block;
+    margin-top: 10px;
+}
+
 .modal-footer{
     border-top: 1px solid #111;
 }
