changes alert style

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -354,6 +354,7 @@ footer{
     color: #fff;
     background-color: darkorange;
     border-color: orange;
+    display: none;
 }
 
 .modal-content input[type="submit"]{
