--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -32,7 +32,7 @@ html,body{
     background-color: #000;
 }
 
-nav{
+/*nav{
 	width:100%;
 	height: 5vw;
 	position: fixed;
@@ -41,7 +41,7 @@ nav{
     z-index: 1;
 }
 
-/*.logo{
+.logo{
     width: 5vw;
     margin-top: 0.25vw;
     margin-left: 5%;
