--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -32,6 +32,13 @@ html,body{
     background-color: #000;
 }
 
+.navbar{
+    position: fixed;
+    margin-bottom: 0;
+    border: 0;
+    z-index: 1;
+}
+
 /*nav{
 	width:100%;
 	height: 5vw;
