--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -37,6 +37,11 @@ html,body{
     margin-bottom: 0;
     border: 0;
     z-index: 1;
+    width: 100%;
+}
+
+.navbar-default{
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 /*nav{
