--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -44,6 +44,21 @@ html,body{
     background-color: rgba(0, 0, 0, 0.5);
 }
 
+nav ul li, nav ul li a{
+    display: inline-block;
+    font-size: 22px;
+    letter-spacing: 1px;
+    font-family: Bebas Neue, 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    line-height: 5vw;
+    transition: all 1s;
+    cursor: pointer;
+    list-style: none;
+    text-decoration: none;
+}
+
 /*nav{
 	width:100%;
 	height: 5vw;
