--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -36,12 +36,15 @@ html,body{
     position: fixed;
     margin-bottom: 0;
     border: 0;
+    transition: all 1s;
     z-index: 1;
+    height: 5vw;
     width: 100%;
 }
 
 .navbar-default{
     background-color: rgba(0, 0, 0, 0.5);
+    transition: all 1s;
 }
 
 nav ul li, nav ul li a{
@@ -57,6 +60,11 @@ nav ul li, nav ul li a{
     cursor: pointer;
     list-style: none;
     text-decoration: none;
+}
+
+nav ul li a:hover{
+    color: darkorange!important;
+    transition: all 0.5s;
 }
 
 /*nav{
