--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -47,6 +47,10 @@ html,body{
     transition: all 1s;
 }
 
+.navbar-default .navbar-nav>li>a{
+    color: #fff;
+}
+
 nav ul li, nav ul li a{
     display: inline-block;
     font-size: 22px;
@@ -65,6 +69,12 @@ nav ul li, nav ul li a{
 nav ul li a:hover{
     color: darkorange!important;
     transition: all 0.5s;
+}
+
+@media (min-width: 768px){
+.navbar-nav {
+    margin-top: 1vw;
+}
 }
 
 /*nav{
