--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -77,6 +77,13 @@ nav ul li a:hover{
 }
 }
 
+.logo{
+    width: 5vw;
+    margin-top: 0.25vw;
+    margin-left: 5%;
+    margin-right: 2%;
+    cursor: pointer;
+}
 /*nav{
 	width:100%;
 	height: 5vw;
