--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -77,6 +77,12 @@ nav ul li a:hover{
 }
 }
 
+.navbar-brand{
+    margin-top: 0.25vw;
+    margin-left: 5%;
+    margin-right: 2%;
+    padding: 0;
+}
 .logo{
     width: 5vw;
     cursor: pointer;
