--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -88,6 +88,14 @@ nav ul li a:hover{
     width: 5vw;
     cursor: pointer;
 }
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: darkorange;
+}
+
+.navbar-default .navbar-toggle {
+    border: 0;
+}
 /*nav{
 	width:100%;
 	height: 5vw;
