styles menu toggle

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -94,7 +94,11 @@ nav ul li a:hover{
 }
 
 .navbar-default .navbar-toggle {
-    border: 0;
+    border-color: darkorange;
+}
+
+.icon-bar{
+    background-color: #FFF;
 }
 /*nav{
 	width:100%;
