styles menu toggle

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -97,7 +97,7 @@ nav ul li a:hover{
     border-color: darkorange;
 }
 
-.icon-bar{
+.navbar-default .navbar-toggle .icon-bar{
     background-color: #FFF;
 }
 /*nav{
