--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -100,6 +100,11 @@ nav ul li a:hover{
 .navbar-default .navbar-toggle .icon-bar{
     background-color: #FFF;
 }
+
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-color: #fff;
+    background-color: rgba(0, 0, 0, 0.5);
+}
 /*nav{
 	width:100%;
 	height: 5vw;
