--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -104,6 +104,7 @@ nav ul li a:hover{
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #fff;
     background-color: rgb(0, 0, 0);
+    transition: all 1s;
 }
 /*nav{
 	width:100%;
