--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -43,7 +43,7 @@ html,body{
 }
 
 .navbar-default{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0);
     transition: all 1s;
 }
 
