--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -43,7 +43,7 @@ html,body{
 }
 
 .navbar-default{
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, .5);
     transition: all 1s;
 }
 
@@ -103,7 +103,7 @@ nav ul li a:hover{
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #fff;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, .5);
     transition: all 1s;
 }
 /*nav{
