--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -102,8 +102,8 @@ nav ul li a:hover{
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: #fff;
-    background-color: rgba(0, 0, 0, .5);
+    border-color: transparent;
+    background-color: transparent;
     transition: all 1s;
 }
 /*nav{
