--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -106,6 +106,22 @@ nav ul li a:hover{
     background-color: transparent;
     transition: all 1s;
 }
+
+#donate{
+    font-size: 22px;
+    letter-spacing: 1px;
+    font-family: Bebas Neue, 'Open Sans', sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+    line-height: 5vw;
+    transition: all 1s;
+    cursor: pointer;
+    width: 9vw;
+    height: 13vw;
+    background-image: url("http://safefromharm.cryolab.dk/wp-content/themes/safefromharm/images/donate_flag.png"); 
+    background-size: auto 100%;
+}
 /*nav{
 	width:100%;
 	height: 5vw;
