--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -122,6 +122,10 @@ nav ul li a:hover{
     background-image: url("http://safefromharm.cryolab.dk/wp-content/themes/safefromharm/images/donate_flag.png"); 
     background-size: auto 100%;
 }
+
+.navbar-right{
+    margin: 0;
+}
 /*nav{
 	width:100%;
 	height: 5vw;
