--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -82,10 +82,12 @@ nav ul li a:hover{
     margin-right: 2%;
     padding: 0;
 }
-
-#donate{
-    background-image: none;
 }
+
+@media (max-width: 768px){
+    #donate{
+        background-image: none;
+    }
 }
 
 .logo{
