--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -268,6 +268,17 @@ h2{
     color: #fff;
 }
 
+h3{
+    font-size: 29px;
+    letter-spacing: 1px;
+    font-family: Bebas Neue, 'Open Sans', sans-serif;
+    color: #000000;    
+}
+
+.h3anothercolor{
+    color: darkorange;
+}
+
 p{
     font-family: Avenir Next LT Pro Medium Condensed, 'Open Sans', sans-serif;
     color: #ffffff;
