--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -279,7 +279,7 @@ h3{
     color: darkorange;
 }
 
-h3{
+h4{
     font-size: 25px;   
 }
 
@@ -499,7 +499,7 @@ footer{
 }
 
 .modal-footer{
-    border-bottom: 1px solid rgba(0, 0, 0, 0);
+    border-bottom: 1px solid rgba(0, 0, 0, 0) !important;
 }
 
 @media (min-width: 768px){
