--- a/wp-content/themes/safefromharm/bootstrap/css/bootstrap.css
+++ b/wp-content/themes/safefromharm/bootstrap/css/bootstrap.css
@@ -5952,7 +5952,7 @@ button.close {
 .modal-footer {
   padding: 15px;
   text-align: right;
-  border-top: 1px solid #e5e5e5;
+  border-top: 1px solid rgba(0, 0, 0, 0);
 }
 .modal-footer .btn + .btn {
   margin-bottom: 0;
