--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -499,7 +499,7 @@ footer{
 }
 
 .modal-footer{
-    border-bottom: 1px solid rgba(0, 0, 0, 0) !important;
+    border-bottom: 1px solid rgba(0, 0, 0, 0);
 }
 
 @media (min-width: 768px){
