--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -321,11 +321,6 @@ body {
 }
 
 .pgraf{
-  color:#000;
-  font-size:13px;
-}
-
-.pgraflight{
   color:#fff;
   font-size:13px;
 }
@@ -335,7 +330,7 @@ body {
 	display:block;
 	margin-bottom:15px;
 	width:100%;
-	background:#eee;
+	background-color: rgba(238, 238, 238, 0.05);
 	height:35px;
 	border-radius:3px;
 	-moz-border-radius:3px;
@@ -356,7 +351,7 @@ body {
 	position:absolute;
 	top:0;
 	left:0;
-width:110px;
+    width:150px;
 	font-weight:bold;
 	font-size:13px;
 	color:#ffffff;
