--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -18,7 +18,7 @@ html,body{
 
 .page{
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
     border: 1px solid;
     font-family: 'Open Sans', sans-serif;
     background-color: #fff;
@@ -26,7 +26,7 @@ html,body{
 
 .smallpage{
     width: 100%;
-	height: 50vh;
+	min-height: 50vh;
     border: 1px solid;
     font-family: Bebas Neue, 'Open Sans', sans-serif;
     background-color: #000;
