--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -17,6 +17,8 @@ html,body{
 }
 
 .page{
+    display: flex;
+    flex-direction: column;
 	width: 100%;
 	min-height: 100vh;
     border: 1px solid;
