--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -409,6 +409,7 @@ body {
 
 /*---------------THE TIGER FAMILY--------------*/
 
+/*
 .tigerbox1{
     height: 300px;
     background-image: url(http://safefromharm.cryolab.dk/wp-content/themes/safefromharm/images/bengal_tiger1.png);
@@ -450,6 +451,7 @@ body {
     background-size: 90%;
     background-repeat: no-repeat;
 }
+*/
 
 /*---------------WHY THEY MATTER--------------*/
 
