css ændringer tiger family

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -419,6 +419,7 @@ body {
 .ptigerfamily:hover{
     color: #d85913;
     transition: all 0.5s;
+    cursor: pointer;    
 }
 
 /*---------------WHY THEY MATTER--------------*/
