--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -34,6 +34,10 @@ html,body{
     background-color: #000;
 }
 
+#whytheymatter{
+    display: block;
+}
+
 .navbar{
     position: fixed;
     margin-bottom: 0;
