fixes caption background

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -623,5 +623,5 @@ footer{
     margin: 0 auto;
     text-align: center;
     height: 3vw;
-    background-color: rgba(0,0,0,.5);
+    background-color: rgb(0,0,0);
 }
