makes styles important

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -615,10 +615,10 @@ footer{
 
 .bx-caption span {
     color: #fff;
-    font-family: Bebas Neue, 'Open Sans', sans-serif;
+    font-family: Bebas Neue, 'Open Sans', sans-serif!important;
     font-weight: bold;
     display: block;
-    font-size: 2em;
+    font-size: 2em!important;
     width: 50%;
     margin: 0 auto;
     text-align: center;
