edits caption font

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -615,7 +615,7 @@ footer{
 
 .bx-caption span {
     color: #fff;
-    font-family: Bebas Neue, 'Open Sans', sans-serif!important;
+    font-family: Avenir Next LT Pro Medium Condensed, 'Open Sans', sans-serif!important;
     font-weight: bold;
     display: block;
     font-size: 1.2em!important;
