--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -454,7 +454,9 @@ body {
 
 footer{
     width: 100%;
-    height: 40vh;
+    display:flex;
+    flex-direction: column;
+    min-height: 40vh;
     bottom: 0;
     background-color: #000;
     font-size: 20px;
