made logo responsive

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -439,15 +439,30 @@ body {
 
 
 /*---------------How & Who-------------------------*/
+#howwho p{
+    color: #000;
+}
+
 #wwf{
-    width: 10vw; 
+    width: 15vw; 
     display: inline-block;
 }
 
 #eastpak{
-    width: 15vw; 
+    width: 20vw; 
     display: inline-block;
 }
+
+@media (max-width: 992px){
+    #wwf{
+        width: 30vw;
+    }
+
+    #eastpak{
+        width: 35vw;
+    }
+}
+
 
 /*---------------INSTAGRAM--------------*/
 
