added padding to who&how text

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -441,6 +441,7 @@ body {
 /*---------------How & Who-------------------------*/
 #howwho p{
     color: #000;
+    padding: 0 9vw 0 9vw;
 }
 
 #wwf{
