--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -184,21 +184,6 @@ h1{
 
 }
 
-#ourmission h1{
-    margin: 0;
-    font-size: 4vw;
-}
-
-#ourmission p{
-    font-size: 1vw;
-}
-
-@media (max-width: 1200px){
-    #ourmission p{
-        font-size: 2vw;
-    }
-}
-
 h2{
     text-align: center;
     font-size: 35px;
@@ -247,6 +232,26 @@ p{
     background-color: #000;
 }
 
+#ourmission h1{
+    margin: 0;
+    font-size: 4vw;
+}
+
+#ourmission p{
+    font-size: 1vw;
+}
+
+@media (max-width: 1200px){
+    #ourmission p{
+        font-size: 2vw;
+    }
+}
+
+@media (max-width: 1320px){
+  .page#ourmission{
+    min-height: 30vw; 
+  }  
+}
 
 /*---------------OVERVIEW--------------*/
 
