--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -373,7 +373,7 @@ body {
 /*---------------SUPPORT THE TIGERS - DONATE--------------*/
 
 .smallpage#supporttigers{
-    min-height: 40vw;
+    min-height: 40vh;
 }
 
 .donatebtn{
