adds fading to map

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -347,12 +347,20 @@ body {
 /*---------------THE MAP - TIGER POPULATION--------------*/
 
 #map{
-    background-image: url(http://safefromharm.cryolab.dk/wp-content/themes/safefromharm/images/themap_before.jpg);
+    background-image:  transparent url(http://safefromharm.cryolab.dk/wp-content/themes/safefromharm/images/themap_before.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
+    transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -ms-transition: all 0.5s;
     width: 98vw;
     height: 41vw;
     margin: 0 auto;
+    filter: alpha(opacity=100);
+    -moz-opacity: 1;
+    -khtml-opacity: 1;
+    opacity: 1;
 }
 
 
