--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -373,6 +373,12 @@ body {
     text-align:center; 
     color: darkorange;
 }
+.tigerFamily:hover{
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
 .tigerFamily:hover .ptigerfamily{
     color: #d85913;
     transition: all 0.5s;
