adds transition to TF btn

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -364,6 +364,10 @@ body {
 /*---------------THE TIGER FAMILY--------------*/
 .tigerFamily{
     cursor: pointer;
+    transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+    -ms-transition: all 0.5s;
 }
 
 .ptigerfamily{
