btn ændring farve + margin h3

--- a/wp-content/themes/safefromharm/style.css
+++ b/wp-content/themes/safefromharm/style.css
@@ -7,7 +7,7 @@
         Version: 1.0
         License: none
         License URI: license.txt
-        Tags: dark, blue
+        Tags: dark, orange
         This theme, like WordPress, is licensed under the GPL.
         */
 
@@ -213,7 +213,8 @@ h3{
     font-size: 29px;
     letter-spacing: 1px;
     font-family: Bebas Neue, 'Open Sans', sans-serif;
-    color: #000000;    
+    color: #000000; 
+    margin-bottom:15px;
 }
 
 .h3anothercolor{
@@ -362,7 +363,7 @@ body {
     -moz-transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -ms-transition: all 0.5s;
-    width: 98vw;
+    width: 95vw;
     height: 41vw;
     margin: 0 auto;
 }
@@ -575,17 +576,18 @@ footer{
     letter-spacing: 1px;
 }
 
-.btn-default:hover, .btn-default:focus, .btn-default:active{
-    background-color: orange!important;
-    border: 0;
-    transition: all 0.5s;
-}
-
 .btn-default{
     border: 0px;
     font-family: Bebas Neue, 'Open Sans', sans-serif;
     font-weight: bold;
 }
+
+.btn-default:hover, .btn-default:focus, .btn-default:active{
+    background-color: #d85913!important;
+    border: 0;
+    transition: all 0.5s;
+}
+
 .modal-content{
     background-color: #222222;
 }
